# EMT-Engine

./: .gitignore  BaseClass.cpp  BaseClass.hpp  LICENSE.md  ReadMeAndroid.txt  SubClass.cpp  SubClass.hpp
AndroidStuffHolder/: AndroidManifest.xml
AndroidStuffHolder/assets/: PixelShader.frag
AndroidStuffHolder/assets/Resources/Shaders/: VertexShader.vert
AndroidStuffHolder/cpp/: CMakeLists.txt  JEJ_Android_Main.cpp  main.cpp
AndroidStuffHolder/cpp/incSource/include/Core/: EngineObject.hpp  Scene.hpp  Timer.hpp
AndroidStuffHolder/cpp/incSource/include/Core/Inl/: Scene.inl
AndroidStuffHolder/cpp/incSource/include/EntityComponentSys/Components/: Component.hpp  RenderComponent.hpp  TransformComponent.hpp
AndroidStuffHolder/cpp/incSource/include/EntityComponentSys/Entity/Inl/: Entity.inl
AndroidStuffHolder/cpp/incSource/include/IO_Manager/Android/: InputManager.hpp
AndroidStuffHolder/cpp/incSource/include/Texture/: Shape.hpp
AndroidStuffHolder/cpp/incSource/include/Utility/: Assert.hpp  FileHandler.hpp  Random.hpp
AndroidStuffHolder/cpp/incSource/include/Utility/Inl/: Messenger.inl  Random.inl
AndroidStuffHolder/cpp/incSource/include/Window/: AndroidWindow.hpp  Win32Window.hpp  Window.hpp
AndroidStuffHolder/cpp/incSource/source/Core/: EngineObject.cpp  Timer.cpp
AndroidStuffHolder/cpp/incSource/source/EntityComponentSys/Components/: Component.cpp  ShaderComponent.cpp  TransformComponent.cpp
AndroidStuffHolder/cpp/incSource/source/EntityComponentSys/Systems/: RenderSystem.cpp  ShaderSystem.cpp  TextureSystem.cpp
AndroidStuffHolder/cpp/incSource/source/Graphics/: Graphics.cpp
AndroidStuffHolder/cpp/incSource/source/IO_Manager/Win32/: Mouse.cpp
AndroidStuffHolder/cpp/incSource/source/Texture/: Shape.cpp
AndroidStuffHolder/cpp/incSource/source/Utility/: FileHandler.cpp  Messenger.cpp
AndroidStuffHolder/cpp/incSource/source/Window/: AndroidWindow.cpp
CodingConvention/: jejEngineUML.vsdx
JEJ_Engine/: JEJ_Engine.sln
JEJ_Engine/Debug/: JEJ_Engine.lib
JEJ_Engine/Debug/Resources/Shaders/: FragmentShader.frag  FragmentShaderTexture.frag  PixelShader.frag  VertexShader.vert
JEJ_Engine/JEJ_Engine/: JEJ_Engine.vcxproj  JEJ_Engine.vcxproj.filters  ReadMe.txt  main.cpp
JEJ_Engine/JEJ_Engine/Debug/: vc120.idb
JEJ_Engine/Release/Resources/: log.txt
JEJ_Engine/Release/Resources/Shaders/: FragmentShaderTexture.frag  VertexShader.vert
NOT_IN_USE_Graphics/: OGL_ES2.hpp
TestGame/TestGame/: TestGame.vcxproj  main.cpp
TestGame/TestGame/Debug/: vc120.idb
TestGame/temp/: vc120.idb
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/team_jej/android/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/Resources/Shaders/: FragmentShader.frag  PixelShader.frag  VertexShader.vert
android/app/src/main/cpp/: CMakeLists.txt  JEJ_Android_Main.cpp  main.cpp  native-lib.cpp
android/app/src/main/java/team_jej/android/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/native-activity/: local.properties
android/native-activity/app/src/main/cpp/: CMakeLists.txt  main.cpp
include/Core/: AndroidAppState.hpp  BaseStructs.hpp  EngineObject.hpp  Scene.hpp  Setting.hpp  Settings.hpp  Timer.hpp
include/Core/Inl/: Scene.inl  Settings.inl
include/EntityComponentSys/: Entity.hpp
include/EntityComponentSys/Components/: CollisionComponent.hpp  Component.hpp  RenderComponent.hpp  ShaderComponent.hpp  ShapeComponent.hpp  SpriteComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
include/EntityComponentSys/Components/Inl/: Component.inl  RenderComponent.inl  ShapeComponent.inl
include/EntityComponentSys/Components/Shapes/: Circle.hpp  Convex.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
include/EntityComponentSys/Entity/: Entity.hpp
include/EntityComponentSys/Entity/Inl/: Entity.inl
include/EntityComponentSys/Systems/: CollisionSystem.hpp  RenderSystem.hpp  ShaderSystem.hpp  ShapeSystem.hpp  SpriteSystem.hpp  System.hpp  TextureSystem.hpp  TransformSystem.hpp  UserSystem.hpp
include/EntityComponentSys/Systems/Inl/: System.inl  UserSystem.inl
include/Graphics/: Graphics.hpp  OGL_ES2.hpp
include/IO_Manager/: InputManagerImpl.hpp
include/IO_Manager/Win32/: InputManager.hpp  Keyboard.hpp  Mouse.hpp
include/Texture/: Shape.hpp
include/Texture/Inl/: Shape.inl
include/Utility/: Assert.hpp  FileHandler.hpp  Math.hpp  Messenger.hpp  Random.hpp  Various.hpp  Windows.hpp
include/Utility/FileHandler/: FileHandler.hpp  FileHandlerAndroid.hpp  FileHandlerWin32.hpp
include/Utility/Inl/: Messenger.inl  Random.inl
include/Window/: AndroidWindow.hpp  Win32Window.hpp  Window.hpp
include/Window/Win32Window/: Win32Window.hpp
lib/: libEGL.lib  libGLESv2.lib
source/Core/: AndroidAppState.cpp  EngineObject.cpp  Scene.cpp  Settings.cpp  Timer.cpp
source/EntityComponentSys/: Entity.cpp
source/EntityComponentSys/Components/: CollisionComponent.cpp  Component.cpp  RenderComponent.cpp  ShaderComponent.cpp  ShapeComponent.cpp  SpriteComponent.cpp  TextureComponent.cpp  TransformComponent.cpp
source/EntityComponentSys/Components/Shapes/: Circle.cpp  Convex.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
source/EntityComponentSys/Entity/: Entity.cpp
source/EntityComponentSys/Systems/: CollisionSystem.cpp  RenderSystem.cpp  ShaderSystem.cpp  ShapeSystem.cpp  SpriteSystem.cpp  System.cpp  TextureSystem.cpp  TransformSystem.cpp  UserSystem.cpp
source/Graphics/: OGL_ES2.cpp
source/IO_Manager/Android/: InputManager.cpp
source/IO_Manager/Win32/: InputManager.cpp  Keyboard.cpp  Mouse.cpp
source/Texture/: Shape.cpp
source/Utility/: Assert.cpp  FileHandler.cpp  FileHandlerAndroid.cpp  FileHandlerWindows.cpp  Math.cpp  Messenger.cpp  Windows.cpp
source/Utility/FileHandler/: FileHandler.cpp  FileHandlerAndroid.cpp  FileHandlerWin32.cpp
source/Utility/Windows/: Windows.cpp
source/Window/: AndroidWindow.cpp  Win32Window.cpp  Window.cpp
source/Window/Win32Window/: Win32Window.cpp
(+2 files in other folders)
